# waapi-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: DESIGN.md  README_CN.md  TODO.md
examples/: get_func.rs  get_info.rs  monitor.rs  subscribe.rs  waql.rs
src/: args.rs  client.rs  error.rs  lib.rs  types.rs  uris.rs  wamp.rs
tests/: basic_call.rs  subscribe.rs  subscribe_callback.rs  sync_call.rs  sync_subscribe.rs
