[package]
name = "waapi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
wamp_async = { git = "https://github.com/xmimu/wamp_async.git", branch = "dev" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2.0.18"
log = "0.4.29"

[dev-dependencies]
env_logger = "0.11.9"
