[package]
name = "waapi-rs"
version = "0.2.2"
edition = "2021"
rust-version = "1.70"
description = "A Rust client for Wwise Authoring API (WAAPI), supporting async and sync usage"
license = "MIT"
repository = "https://github.com/xmimu/waapi-rs"
homepage = "https://github.com/xmimu/waapi-rs"
documentation = "https://docs.rs/waapi-rs"
readme = "README.md"
keywords = ["wwise", "waapi", "audio", "wamp", "gamedev"]
categories = ["api-bindings", "multimedia::audio", "game-development"]
authors = ["xmimu <1101588023@qq.com>"]
exclude = ["docs/TODO.md", ".github/"]

[dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2.0.18"
log = "0.4.29"

[dev-dependencies]
env_logger = "0.11.9"
